# ProjectPlayer

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
ProcessVideoPlayer/include/: AudioChunk.hpp  AudioManager.hpp  Decoder.hpp  Frame.hpp  FrameManager.hpp  Player.hpp
ProcessVideoPlayer/src/: AudioChunk.cpp  AudioManager.cpp  Decoder.cpp  Frame.cpp  FrameManager.cpp  Player.cpp
Test/: Test.cpp  test.cpp
VideoPlayer/: CMakeLists.txt  README.md  VideoPlayer. cpp  VideoPlayer.cpp  VideoPlayer.hpp  main  main.cpp
VideoPlayer/Button/: Button.cpp  Button.hpp
VideoPlayer/include/: AudioDecoder.hpp  Button.hpp  Decoder.hpp  ErrorHandler.hpp  MediaDecoder.hpp  MediaFile.hpp  MediaPlayer.hpp  MediaRenderer.hpp  PauseButton.hpp  PlayButton.hpp  Player.hpp  PlayerControls.hpp  ProgressBar.hpp  ScrollBar.hpp  VideoDecoder.hpp
VideoPlayer/src/: AudioDecoder.cpp  Button.cpp  Decoder.cpp  ErrorHandler.cpp  MediaDecoder.cpp  MediaFile.cpp  MediaPlayer.cpp  MediaRenderer.cpp  PauseButton.cpp  PlayButton.cpp  Player.cpp  PlayerConntrols.cpp  ProgressBar.cpp  ScrollBar.cpp  VideoDecoder.cpp  main.cpp
VideoPlayer/tinyfiledialogs/: tinyfiledialogs.h
VideoPlayerBack/: CMakeLists.txt
VideoPlayerBack/API/: MediaPlayer.cpp  MediaPlayer.hpp
VideoPlayerBack/Test/: main.cpp  test.cpp
VideoPlayerBack/include/: ErrorHandler.hpp  MediaDecoder.hpp  VideoDecoder.hpp
VideoPlayerBack/include/core/: AudioDecoder.hpp  ErrorHandler.hpp  MediaPlayer.hpp  MediaPlayerException.hpp  MediaPlayerManager.hpp  VideoDecoder.hpp
VideoPlayerBack/include/playlist/: Playlist.hpp  PlaylistManager.hpp
VideoPlayerBack/include/storage/: ConfigManager.hpp  FileManager.hpp  HistoryManager.hpp
VideoPlayerBack/src/: AudioDecoder.cpp  ErrorHandler.cpp  MediaDecoder.cpp  VideoDecoder.cpp
VideoPlayerBack/src/core/: AudioDecoder.cpp  ErrorHandler.cpp  MediaDecoder.cpp  MediaPlayer.cpp  MediaPlayerManager.cpp  VideoDecoder.cpp
VideoPlayerBack/src/playlist/: Playlist.cpp  PlaylistManager.cpp
VideoPlayerBack/src/storage/: ConfigManager.cpp  FileManager.cpp  HistoryManager.cpp
VideoPlayerFront/: CMakeLists.txt  main.cpp  test.cpp
VideoPlayerFront/include/: Button.hpp  FileBrowser.hpp  PauseButton.hpp  PlayButton.hpp  ProgressBar.hpp  VolumeBar.hpp
VideoPlayerFront/include/window/: window.hpp
VideoPlayerFront/src/: Button.cpp  FileBrowser.cpp  PauseButton.cpp  PlayButton.cpp  ProgressBar.cpp  VolumeBar.cpp
VideoPlayerFront/src/window/: window.cpp
Window/include/: Window.hpp
Window/src/: Window.cpp
